test/bad/classes/inheritance04.px

class Base def
    x: Int

class Sub1(Base) def
    y: Int

class Sub2(Base) def
    y: Int


func f(obj: Sub1) def
    skip

f(Sub2())
